Only show news on home page

--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,8 @@ header = "Digital Archaeology Bern"
 keywords = [ "Portfolio", "developer", "coding", "maker"]
 #googleAnalytics = ""
 
+mainSections = ['news']
+
 showHeaderOnHomepage = true
 toc = true
 twemoji = true
