--- a/config.toml
+++ b/config.toml
@@ -48,14 +48,9 @@ url = "/abstracts"
 weight = 3
 
 [[Menu.Main]]
-name = "Workshops"
+name = "Workshops & Excursion"
 url = "/workshops"
 weight = 3.5
-
-[[Menu.Main]]
-name = "Registration"
-url = "https://www.conftool.com/dab2023"
-weight = 4
 
 [[Menu.Main]]
 name = "Key Dates"
